--- a/sw/LEDIManager/res/layout/activity_main.xml
+++ b/sw/LEDIManager/res/layout/activity_main.xml
@@ -36,6 +36,14 @@
             android:layout_height="wrap_content"
             android:onClick="setLEDITime"
             android:text="SetTime" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startVirtualLEDIActivity"
+            android:text="vLEDI" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -57,6 +65,7 @@
             android:layout_height="wrap_content"
             android:onClick="sendLEDIText"
             android:text="send" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -70,7 +79,7 @@
         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
-            android:layout_height="334dp"
+            android:layout_height="154dp"
             android:text="TextView" />
     </LinearLayout>
 
