--- a/sw/LEDIManager/res/values/colors.xml
+++ b/sw/LEDIManager/res/values/colors.xml
@@ -7,4 +7,5 @@
     <drawable name="grey">#999999</drawable>
     <drawable name="dk_grey">#666666</drawable>
     <drawable name="white">#ffffffff</drawable>
+    <drawable name="black">#000000</drawable>
 </resources>
