--- a/sw/LEDIManager/res/layout/activity_main.xml
+++ b/sw/LEDIManager/res/layout/activity_main.xml
@@ -1,13 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/RelativeLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".LEDIActivity" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false" >
 
         <ToggleButton
             android:id="@+id/toggleButton1"
@@ -16,52 +18,31 @@
             android:text="ToggleButton"
             android:textOff="@string/labelOff"
             android:textOn="@string/labelOn" />
-
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
+        android:id="@+id/LinearLayout2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" >
-
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.67" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="sendLEDIText"
-            android:text="send" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:layout_below="@+id/linearLayout1"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="286dp"
-            android:text="TextView" />
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text="LEDI Manager" />
     </LinearLayout>
 
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/LinearLayout3"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/linearLayout1" >
+        android:gravity="bottom" >
 
         <Button
             android:id="@+id/button1"
@@ -85,5 +66,29 @@
             android:onClick="startVirtualLEDIActivity"
             android:text="vLEDI" />
     </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
+
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.67" >
+
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="sendLEDIText"
+            android:text="send" />
+    </LinearLayout>
+    
 
 </RelativeLayout>
